Added references, punctation to notebooks.

--- a/examples/MPC.ipynb
+++ b/examples/MPC.ipynb
@@ -6,29 +6,31 @@
    "source": [
     "## Model Predictive Control Example\n",
     "\n",
-    "To determine the optimal control input $u \\in \\mathbb{R}^m$ applied to the linear time-invariant (LTI) system $\\left( A, B\\right) \\in \\left( \\mathbb{R}^{n \\times n}, \\mathbb{R}^{n \\times m} \\right)$ with state $x \\in \\mathbb{R}^n$, we solve the following optimization problem:\n",
+    "Consider the following model predictive control [1], [2] example. To determine the optimal control input $u \\in \\mathbb{R}^m$ applied to the linear time-invariant (LTI) system $\\left( A, B\\right) \\in \\left( \\mathbb{R}^{n \\times n}, \\mathbb{R}^{n \\times m} \\right)$ with state $x \\in \\mathbb{R}^n$, we solve the optimization problem\n",
     "\n",
     "\\begin{equation}\n",
     "\\begin{array}{ll}\n",
     "\\text{minimize} \\quad & x_H^T P x_H + \\sum_{i=0}^{H-1} x_i^T Q x_i + u_i^T R u_i\\\\\n",
     "\\text{subject to} \\quad &x_{i+1} = A x_i + B u_i \\quad \\forall i \\in \\{0, ..., H-1\\} \\\\\n",
     "& \\Vert u_i \\Vert_\\infty \\leq 1 \\quad \\forall i \\in \\{0, ..., H-1\\} \\\\\n",
-    "& x_0 = x_\\mathrm{init} \\\\\n",
+    "& x_0 = x_\\mathrm{init}, \\\\\n",
     "\\end{array}\n",
     "\\end{equation}\n",
     "\n",
-    "The prediction horizon is $H$, the control input is constrained within a box of size $u^\\mathrm{max}$ and the cost matrices are positive definite: $P, Q, R \\in \\mathbb{S}_{++}^n, \\mathbb{S}_{++}^n, \\mathbb{S}_{++}^m$. Usually, $P$ is chosen as the solution to the discrete-time algebraic Riccati equation for the given LTI system and cost matrices $Q, R$. The initial measured state is $x_\\mathrm{init}$. We arrange to state and input variables to matrices $X$ and $U$ with $X_{:,i} = x_i$ and $U_{:,i} = u_i$, respectively, and reformulate the problem to be [DPP-compliant](https://www.cvxpy.org/tutorial/advanced/index.html#disciplined-parametrized-programming):\n",
+    "where $x_i \\in \\mathbb{R}^n$ and $u_i \\in \\mathbb{R}^m$ are the variables. The prediction horizon is $H$, the control input is constrained within a box of size $1$ and the cost matrices are positive definite: $P, Q, R \\in \\mathbb{S}_{++}^n, \\mathbb{S}_{++}^n, \\mathbb{S}_{++}^m$. Usually, $P$ is chosen as the solution to the discrete-time algebraic Riccati equation for the given LTI system and cost matrices $Q, R$. The initial measured state is $x_\\mathrm{init}$. We arrange the state and input variables to matrices $X$ and $U$ with $X_{:,i} = x_i$ and $U_{:,i} = u_i$, respectively, and reformulate the problem to be [DPP-compliant](https://www.cvxpy.org/tutorial/advanced/index.html#disciplined-parametrized-programming), i.e.,\n",
     "\n",
     "\\begin{equation}\n",
     "\\begin{array}{ll}\n",
     "\\text{minimize} \\quad & \\Vert P^{1/2} X_{:,H} \\Vert_2^2 + \\Vert Q^{1/2} X_{:,0:H-1} \\Vert_F^2 + \\Vert R^{1/2} U \\Vert_F^2\\\\\n",
     "\\text{subject to} \\quad &X_{:,1:H} = A X_{:,0:H-1} + B U \\\\\n",
     "& | U | \\leq 1 \\\\\n",
-    "& X_{:,0} = x_\\mathrm{init} \\\\\n",
+    "& X_{:,0} = x_\\mathrm{init}, \\\\\n",
     "\\end{array}\n",
     "\\end{equation}\n",
     "\n",
-    "Let's define the corresponding CVXPY problem:"
+    "with variables $X \\in \\mathbb{R}^{n \\times H+1}$ and $U \\in \\mathbb{R}^{m \\times H}$. \n",
+    "\n",
+    "Let's define the corresponding CVXPY problem."
    ]
   },
   {
@@ -108,7 +110,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, you can use a python wrapper around the generated code as a custom CVXPY solve method:"
+    "Now, you can use a python wrapper around the generated code as a custom CVXPY solve method."
    ]
   },
   {
@@ -145,6 +147,15 @@
     "t1 = time.time()\n",
     "print('\\nC solve time:', 1000*(t1-t0), 'ms')\n",
     "print('C objective function value:', val)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\\[1\\] Wang, Yang, and Stephen Boyd. \"Fast model predictive control using online optimization.\" IEEE Transactions on control systems technology 18.2 (2009): 267-278.\n",
+    "\n",
+    "\\[2\\] Hovgaard, T. G., Larsen, L. F., Jørgensen, J. B., and Boyd, S.  \"MPC for wind power gradients—utilizing forecasts, rotor inertia, and central energy storage.\" 2013 European Control Conference (ECC). IEEE, 2013."
    ]
   }
  ],
