--- a/examples/actuator.ipynb
+++ b/examples/actuator.ipynb
@@ -10,26 +10,26 @@
     "\n",
     "Usually, multiple atuators are available to produce this control input. The vector $u \\in \\mathbb{R}^n$ contains the single actuator input values in its components. If $n > m$ and the actuators are in general position, we call the system \"over-actuated\", since there are many realizations of $u$ that result in the same value of $w$ via the linear mapping $A$. \n",
     "\n",
-    "Having this freedom of choice, we want to minimize energy consumption, modeled as $\\kappa^T | u |$ (with $\\kappa \\geq 0$), while discouraging rapid changes of the actuation values, i.e., $\\lambda^\\mathrm{sm} \\Vert u-u^\\mathrm{prev} \\Vert_2^2$ with $\\lambda^\\mathrm{sm} \\geq 0$ and $u^\\mathrm{prev}$ being the actuation of the previous time step. Given the bounds $u^\\mathrm{min}$ and $u^\\mathrm{max}$ $(u^\\mathrm{min} \\leq u^\\mathrm{max})$ on $u$, there might be cases when the desired control input $w$ is infeasible. Hence, we only softly penalize deviations between desired and actual control input with the cost term $\\Vert A u - w \\Vert_2^2$. The resulting optimization problem is the following:\n",
+    "Having this freedom of choice, we want to minimize energy consumption, modeled as $\\kappa^T | u |$ (with $\\kappa \\geq 0$), while discouraging rapid changes of the actuation values, i.e., $\\lambda^\\mathrm{sm} \\Vert u-u^\\mathrm{prev} \\Vert_2^2$ with $\\lambda^\\mathrm{sm} \\geq 0$ and $u^\\mathrm{prev}$ being the actuation of the previous time step. Given the bounds $u^\\mathrm{min}$ and $u^\\mathrm{max}$ $(u^\\mathrm{min} \\leq u^\\mathrm{max})$ on $u$, there might be cases when the desired control input $w$ is infeasible. Hence, we only softly penalize deviations between desired and actual control input with the cost term $\\Vert A u - w \\Vert_2^2$. We solve the optimization problem\n",
     "\n",
     "\\begin{equation}\n",
     "\\begin{array}{ll}\n",
     "\\text{minimize} \\quad &\\Vert A u - w \\Vert_2^2  + \\lambda^\\mathrm{sm} \\Vert u-u^\\mathrm{prev} \\Vert_2^2 + \\kappa^T | u |\\\\\n",
-    "\\text{subject to} \\quad &u^\\mathrm{min} \\leq u \\leq u^\\mathrm{max}\n",
+    "\\text{subject to} \\quad &u^\\mathrm{min} \\leq u \\leq u^\\mathrm{max},\n",
     "\\end{array}\n",
     "\\end{equation}\n",
     "\n",
-    "We introduce the variable $\\Delta u = u - u^\\mathrm{prev}$ to make the problem [DPP-compliant](https://www.cvxpy.org/tutorial/advanced/index.html#disciplined-parametrized-programming):\n",
+    "with variable $u \\in \\mathbb{R}^n$. To make the problem [DPP-compliant](https://www.cvxpy.org/tutorial/advanced/index.html#disciplined-parametrized-programming), we introduce the additional variable $\\Delta u = u - u^\\mathrm{prev}$ and solve\n",
     "\n",
     "\\begin{equation}\n",
     "\\begin{array}{ll}\n",
     "\\text{minimize} \\quad &\\Vert A u - w \\Vert_2^2  + \\lambda^\\mathrm{sm} \\Vert \\Delta u \\Vert_2^2 + \\kappa^T | u |\\\\\n",
     "\\text{subject to} \\quad &u^\\mathrm{min} \\leq u \\leq u^\\mathrm{max} \\\\\n",
-    "&\\Delta u = u-u^\\mathrm{prev}\n",
+    "&\\Delta u = u-u^\\mathrm{prev}.\n",
     "\\end{array}\n",
     "\\end{equation}\n",
     "\n",
-    "Let's define the corresponding CVXPY problem:"
+    "Let's define the corresponding CVXPY problem."
    ]
   },
   {
@@ -108,7 +108,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, you can use a python wrapper around the generated code as a custom CVXPY solve method:"
+    "Now, you can use a python wrapper around the generated code as a custom CVXPY solve method."
    ]
   },
   {
