--- a/examples/network.ipynb
+++ b/examples/network.ipynb
@@ -13,23 +13,23 @@
     "\\begin{equation}\n",
     "U_i(f_i) = \\begin{cases}\n",
     "w_i f_i \\quad &\\text{if} \\quad f^\\mathrm{min}_i \\leq f_i \\leq f^\\mathrm{max}_i \\\\\n",
-    "-\\infty \\quad &\\text{otherwise}\n",
+    "-\\infty \\quad &\\text{otherwise}.\n",
     "\\end{cases}\n",
     "\\end{equation}\n",
     "\n",
-    "To summarize in vector form, we want to solve the following optimization problem:\n",
+    "To summarize in vector form, we want to solve the optimization problem\n",
     "\n",
     "\\begin{equation}\n",
     "\\begin{array}{ll}\n",
     "\\text{maximize} \\quad &w^T f \\\\\n",
     "\\text{subject to} \\quad &R f \\leq c \\\\\n",
-    "&f^\\mathrm{min} \\leq f \\leq f^\\mathrm{max}\n",
+    "&f^\\mathrm{min} \\leq f \\leq f^\\mathrm{max},\n",
     "\\end{array}\n",
     "\\end{equation}\n",
     "\n",
-    "with parameters $w\\geq 0$, $R$, $c \\geq 0$ and $0 \\leq f^\\mathrm{min} \\leq f^\\mathrm{max}$.\n",
+    "with variable $f \\in \\mathbb{R}_+^n$ and parameters $w\\geq 0$, $c \\geq 0$, $R$, and $0 \\leq f^\\mathrm{min} \\leq f^\\mathrm{max}$.\n",
     "\n",
-    "Let's define the corresponding CVXPY problem:"
+    "Let's define the corresponding CVXPY problem."
    ]
   },
   {
@@ -106,7 +106,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, you can use a python wrapper around the generated code as a custom CVXPY solve method:"
+    "Now, you can use a python wrapper around the generated code as a custom CVXPY solve method."
    ]
   },
   {
