--- a/examples/portfolio.ipynb
+++ b/examples/portfolio.ipynb
@@ -6,19 +6,19 @@
    "source": [
     "## Portfolio Optimization Example\n",
     "\n",
-    "Consider the following optimization problem over the portfolio $w\\in \\mathbb{R}^n$. The return $r$ has expected value $\\alpha$ and covariance $\\Sigma \\in \\mathbb{S}_{++}^n$. The risk aversion factor is denoted by $\\gamma \\geq 0$, and transaction (short-selling) cost is denoted by $\\kappa_\\mathrm{tc(sh)} \\geq 0$:\n",
+    "In portfolio optimization [1], [2], we are interested in finding an optimal portfolio $w\\in \\mathbb{R}^n$ of $n$ assets. The return $r$ has expected value $\\alpha$ and covariance $\\Sigma \\in \\mathbb{S}_{++}^n$. The risk aversion factor is denoted by $\\gamma \\geq 0$, and transaction (short-selling) cost is denoted by $\\kappa_\\mathrm{tc(sh)} \\geq 0$. We solve the optimization\n",
     "\n",
     "\\begin{equation}\n",
     "\\begin{array}{ll}\n",
     "\\text{maximize} \\quad &\\alpha^T w - \\gamma w^T \\Sigma w - \\kappa_\\mathrm{tc}^T |w-w^\\mathrm{prev}| + \\kappa_\\mathrm{sh}^T (w)_- \\\\\n",
     "\\text{subject to} \\quad &\\mathbb{1}^T w = 1 \\\\\n",
-    "&\\Vert w \\Vert_1 \\leq L\n",
+    "&\\Vert w \\Vert_1 \\leq L,\n",
     "\\end{array}\n",
     "\\end{equation}\n",
     "\n",
-    "The previous portfolio is $w^\\mathrm{prev}$, $(\\cdot)_-$ represents the argument's negative part, and $L \\geq 1$ is the maximum value of total long positions plus the total magnitude of short positions.\n",
+    "where $w \\in \\mathbb{R}^n$ is the variable. The previous portfolio is $w^\\mathrm{prev}$, $(\\cdot)_-$ represents the argument's negative part, and $L \\geq 1$ is the maximum value of total long positions plus the total magnitude of short positions.\n",
     "\n",
-    "With the factor model $\\Sigma = F \\Sigma^f F^T + D$ \\[1\\], we can rewrite an equivalent and [DPP-compliant](https://www.cvxpy.org/tutorial/advanced/index.html#disciplined-parametrized-programming) problem:\n",
+    "With the factor model $\\Sigma = F \\Sigma^f F^T + D$ [3], we can rewrite an equivalent and [DPP-compliant](https://www.cvxpy.org/tutorial/advanced/index.html#disciplined-parametrized-programming) problem, i.e.,\n",
     "\n",
     "\\begin{equation}\n",
     "\\begin{array}{ll}\n",
@@ -26,11 +26,11 @@
     "\\text{subject to} &f = F^T w \\\\\n",
     "&\\mathbb{1}^T w = 1 \\\\\n",
     "&\\Vert w \\Vert_1 \\leq L \\\\\n",
-    "&\\Delta w = w-w^\\mathrm{prev} \\\\\n",
+    "&\\Delta w = w-w^\\mathrm{prev}, \\\\\n",
     "\\end{array}\n",
     "\\end{equation}\n",
     "\n",
-    "parameterized by:\n",
+    "where $w \\in \\mathbb{R}^n$ and $f \\in \\mathbb{R}^m$ are variables. To summarize, the parameters are:\n",
     "\n",
     "\\begin{equation}\n",
     "\\begin{array}{ll}\n",
@@ -41,13 +41,13 @@
     "k_\\mathrm{tc} = \\frac{\\kappa_\\mathrm{tc}}{\\gamma} \\\\\n",
     "k_\\mathrm{sh} = \\frac{\\kappa_\\mathrm{sh}}{\\gamma} \\\\\n",
     "w^\\mathrm{prev} \\\\\n",
-    "L\n",
+    "L.\n",
     "\\end{array}\n",
     "\\end{equation}\n",
     "\n",
     "Note that we divided the objective function by the risk aversion factor $\\gamma$. This way, updating the value of $\\gamma$ only affects the linear part of the objective function, avoiding to compute a matrix factorization when solving the problem repeatedly.\n",
     "\n",
-    "Let's define the corresponding CVXPY problem:"
+    "Let's define the corresponding CVXPY problem."
    ]
   },
   {
@@ -149,7 +149,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, you can use a python wrapper around the generated code as a custom CVXPY solve method:"
+    "Now, you can use a python wrapper around the generated code as a custom CVXPY solve method."
    ]
   },
   {
@@ -202,15 +202,11 @@
    "source": [
     "### References\n",
     "\n",
-    "\\[1\\] Victor Ng, Robert F. Engle, Michael Rothschild,\n",
-    "A multi-dynamic-factor model for stock returns,\n",
-    "Journal of Econometrics,\n",
-    "Volume 52, Issues 1–2,\n",
-    "1992,\n",
-    "Pages 245-266,\n",
-    "ISSN 0304-4076,\n",
-    "https://doi.org/10.1016/0304-4076(92)90072-Y.\n",
-    "(https://www.sciencedirect.com/science/article/pii/030440769290072Y)"
+    "[1] Lobo, Miguel Sousa, Maryam Fazel, and Stephen Boyd. \"Portfolio optimization with linear and fixed transaction costs.\" Annals of Operations Research 152.1 (2007): 341-365.\n",
+    "\n",
+    "[2] Moehle, N., Kochenderfer, M. J., Boyd, S., and Ang, A. \"Tax-Aware Portfolio Construction via Convex Optimization.\" Journal of Optimization Theory and Applications 189.2 (2021): 364-383.\n",
+    "\n",
+    "[3] Ng, Victor, Robert F. Engle, and Michael Rothschild. \"A multi-dynamic-factor model for stock returns.\" Journal of Econometrics 52.1-2 (1992): 245-266."
    ]
   }
  ],
