--- a/examples/resource.ipynb
+++ b/examples/resource.ipynb
@@ -6,19 +6,19 @@
    "source": [
     "## Resource Allocation Example\n",
     "\n",
-    "Assume we have to assign resources of $m$ classes to $n$ kinds of jobs. This resource allocation is encoded in $X \\in \\mathbb{R}^{n \\times m}$, with $X_{i,j}$ denoting the amount of resource $j$ allocated to job $i$. Given the utility matrix $W$, we want to solve the following optimization problem:\n",
+    "Assume we have to assign resources of $m$ classes to $n$ kinds of jobs. This resource allocation is encoded in $X \\in \\mathbb{R}^{n \\times m}$, with $X_{i,j}$ denoting the amount of resource $j$ allocated to job $i$. Given the utility matrix $W \\in \\mathbb{R}^{n \\times m}$, we want to solve the optimization problem\n",
     "\n",
     "\\begin{equation}\n",
     "\\begin{array}{ll}\n",
     "\\text{maximize} \\quad &\\mathrm{tr} \\left( W^T X \\right)\\\\\n",
     "\\text{subject to} \\quad &X^\\mathrm{min} \\leq X \\leq X^\\mathrm{max} \\\\\n",
-    "&X^T \\mathbb{1} \\leq r\n",
+    "&X^T \\mathbb{1} \\leq r,\n",
     "\\end{array}\n",
     "\\end{equation}\n",
     "\n",
-    "The minimum and maximum amounts of resources to be allocated are denoted by $X^\\mathrm{min} \\geq 0$ and $X^\\mathrm{max} \\geq X^\\mathrm{min}$, respectively, while $r$ is the vector of available resources. The problem is feasible if $\\left(X^\\mathrm{min}\\right)^T \\mathbb{1} \\leq r$ and $X^\\mathrm{min} \\leq X^\\mathrm{max}$.\n",
+    "with variable $X \\in \\mathbb{R}^{n \\times m}$. The minimum and maximum amounts of resources to be allocated are denoted by $X^\\mathrm{min} \\geq 0$ and $X^\\mathrm{max} \\geq X^\\mathrm{min}$, respectively, while $r$ is the vector of available resources. The problem is feasible if $\\left(X^\\mathrm{min}\\right)^T \\mathbb{1} \\leq r$ and $X^\\mathrm{min} \\leq X^\\mathrm{max}$.\n",
     "\n",
-    "Let's define the corresponding CVXPY problem:"
+    "Let's define the corresponding CVXPY problem."
    ]
   },
   {
@@ -100,7 +100,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, you can use a python wrapper around the generated code as a custom CVXPY solve method:"
+    "Now, you can use a python wrapper around the generated code as a custom CVXPY solve method."
    ]
   },
   {
