Added example data to notebooks.

--- a/examples/MPC.ipynb
+++ b/examples/MPC.ipynb
@@ -35,23 +35,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "import cvxpy as cp\n",
     "\n",
     "# define dimensions\n",
-    "H, n, m = 10, 3, 2\n",
+    "H, n, m = 10, 6, 3\n",
     "\n",
     "# define variables\n",
     "U = cp.Variable((m, H), name='U')\n",
     "X = cp.Variable((n, H+1), name='X')\n",
     "\n",
     "# define parameters\n",
-    "Psqrt = cp.Parameter((n, n), name='Psqrt')\n",
-    "Qsqrt = cp.Parameter((n, n), name='Qsqrt')\n",
-    "Rsqrt = cp.Parameter((m, m), name='Rsqrt')\n",
+    "Psqrt = cp.Parameter((n, n), diag=True, name='Psqrt')\n",
+    "Qsqrt = cp.Parameter((n, n), diag=True, name='Qsqrt')\n",
+    "Rsqrt = cp.Parameter((m, m), diag=True, name='Rsqrt')\n",
     "A = cp.Parameter((n, n), name='A')\n",
     "B = cp.Parameter((n, m), name='B')\n",
     "x_init = cp.Parameter(n, name='x_init')\n",
@@ -72,16 +72,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Assign parameter values and solve the problem."
+    "Assign parameter values and solve the problem. In this case, the state $x = \\left[p^T v^T\\right]^T$ consists of position $p \\in \\mathbb{R}^3$ and velocity $v \\in \\mathbb{R}^3$ of some rigid body in three-dimensional space. The control input $u$ is the force vector that acts on the body's center of mass and its rotational dynamics is not considered. The discretization step is denoted by $t_d \\in \\mathbb{R}_{++}$."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO\n",
+    "import numpy as np\n",
+    "\n",
+    "# continuous-time dynmaics\n",
+    "A_cont = np.concatenate((np.array([[0, 0, 0, 1, 0, 0],\n",
+    "                                   [0, 0, 0, 0, 1, 0],\n",
+    "                                   [0, 0, 0, 0, 0, 1]]),\n",
+    "                         np.zeros((3,6))), axis=0)\n",
+    "mass = 1\n",
+    "B_cont = np.concatenate((np.zeros((3,3)), \n",
+    "                         (1/mass)*np.diag(np.ones(3))), axis=0)\n",
+    "\n",
+    "# discrete-time dynamics\n",
+    "td = 0.1\n",
+    "A.value = np.eye(n)+td*A_cont\n",
+    "B.value = td*B_cont\n",
+    "\n",
+    "# cost\n",
+    "Psqrt.value = np.eye(n)\n",
+    "Qsqrt.value = np.eye(n)\n",
+    "Rsqrt.value = np.sqrt(0.1)*np.eye(m)\n",
+    "\n",
+    "# measurement\n",
+    "x_init.value = np.array([2, 2, 2, -1, -1, 1])\n",
     "\n",
     "val = problem.solve()"
    ]
@@ -115,9 +137,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Python solve time: 22.443056106567383 ms\n",
+      "Python objective function value: 124.5048998939164\n",
+      "\n",
+      "C solve time: 1.817941665649414 ms\n",
+      "C objective function value: 124.5028860274218\n"
+     ]
+    }
+   ],
    "source": [
     "from MPC_code.cpg_solver import cpg_solve\n",
     "import numpy as np\n",
@@ -129,7 +164,12 @@
     "    prob = pickle.load(f)\n",
     "\n",
     "# assign parameter values\n",
-    "# TODO\n",
+    "prob.param_dict['A'].value = np.eye(n)+td*A_cont\n",
+    "prob.param_dict['B'].value = td*B_cont\n",
+    "prob.param_dict['Psqrt'].value = np.eye(n)\n",
+    "prob.param_dict['Qsqrt'].value = np.eye(n)\n",
+    "prob.param_dict['Rsqrt'].value = np.sqrt(0.1)*np.eye(m)\n",
+    "prob.param_dict['x_init'].value = np.array([2, 2, 2, -1, -1, 1])\n",
     "\n",
     "# solve problem conventionally\n",
     "t0 = time.time()\n",
