--- a/examples/network.ipynb
+++ b/examples/network.ipynb
@@ -45,7 +45,7 @@
     "n, m = 100, 10\n",
     "\n",
     "# define variable\n",
-    "f = cp.Variable(n, name='w')\n",
+    "f = cp.Variable(n, name='f')\n",
     "\n",
     "# define parameters\n",
     "R = cp.Parameter((m, n), name='R')\n",
@@ -73,11 +73,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO\n",
+    "import numpy as np\n",
+    "\n",
+    "np.random.seed(0)\n",
+    "R.value = np.round(np.random.rand(m, n))\n",
+    "c.value = n*(0.1+0.1*np.random.rand(m))\n",
+    "w.value = 0.1+np.random.rand(n)\n",
+    "f_min.value = np.zeros(n)\n",
+    "f_max.value = np.ones(n)\n",
     "\n",
     "val = problem.solve(solver='OSQP')"
    ]
@@ -111,9 +118,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Python solve time: 53.50613594055176 ms\n",
+      "Python objective function value: 25.897578597158592\n",
+      "\n",
+      "C solve time: 4.132986068725586 ms\n",
+      "C objective function value: 25.89757859715859\n"
+     ]
+    }
+   ],
    "source": [
     "from network_code.cpg_solver import cpg_solve\n",
     "import numpy as np\n",
@@ -125,7 +145,12 @@
     "    prob = pickle.load(f)\n",
     "\n",
     "# assign parameter values\n",
-    "# TODO\n",
+    "np.random.seed(0)\n",
+    "prob.param_dict['R'].value = np.round(np.random.rand(m, n))\n",
+    "prob.param_dict['c'].value = n*(0.1+0.1*np.random.rand(m))\n",
+    "prob.param_dict['w'].value = np.random.rand(n)\n",
+    "prob.param_dict['f_min'].value = np.zeros(n)\n",
+    "prob.param_dict['f_max'].value = np.ones(n)\n",
     "\n",
     "# solve problem conventionally\n",
     "t0 = time.time()\n",
