--- a/examples/actuator.ipynb
+++ b/examples/actuator.ipynb
@@ -34,14 +34,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import cvxpy as cp\n",
     "\n",
     "# define dimensions\n",
-    "n, m = 3, 4\n",
+    "n, m = 5, 3\n",
     "\n",
     "# define variables\n",
     "u = cp.Variable(n, name='u')\n",
@@ -70,16 +70,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Assign parameter values and solve the problem."
+    "Assign parameter values and solve the problem. In this case, the wrench vector $w = \\left[f^T t\\right]^T$ consists of force $f \\in \\mathbb{R}^2$ and torque $t \\in \\mathbb{R}$ in two-dimensional space. The control input $u \\in \\mathbb{R}^5$ contains a rocket's vertical main engine thrust, lateral main engine thrust, lateral grid fin force, and lateral reaction control system thrust in opposite directions. The first axis points upwards. [TODO: Add figure.]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO\n",
+    "import numpy as np\n",
+    "\n",
+    "A.value = np.array([[1, 0, 0, 0, 0],\n",
+    "                    [0, 1, 1, 1, -1],\n",
+    "                    [0, -1, 1, 1, -1]])\n",
+    "\n",
+    "w.value = np.array([1, 0.1, 0.1])\n",
+    "lamb_sm.value = 0.5\n",
+    "kappa.value = 0.1*np.array([1, 1, 0, 10, 10])\n",
+    "u_prev.value = np.array([1, 0, 0, 0, 0])\n",
+    "u_min.value = np.array([0, 0, -1, 0, 0])\n",
+    "u_max.value = np.array([10, 1, 1, 0.1, 0.1])\n",
     "\n",
     "val = problem.solve()"
    ]
@@ -113,9 +124,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Python solve time: 12.424945831298828 ms\n",
+      "Python objective function value: 0.10382978466976904\n",
+      "\n",
+      "C solve time: 0.7359981536865234 ms\n",
+      "C objective function value: 0.10233038560549475\n"
+     ]
+    }
+   ],
    "source": [
     "from actuator_code.cpg_solver import cpg_solve\n",
     "import numpy as np\n",
@@ -127,7 +151,16 @@
     "    prob = pickle.load(f)\n",
     "\n",
     "# assign parameter values\n",
-    "# TODO\n",
+    "prob.param_dict['A'].value = np.array([[1, 0, 0, 0, 0],\n",
+    "                                       [0, 1, 1, 1, -1],\n",
+    "                                       [0, -1, 1, 1, -1]])\n",
+    "\n",
+    "prob.param_dict['w'].value = np.array([1, 0.1, 0.1])\n",
+    "prob.param_dict['lamb_sm'].value = 0.5\n",
+    "prob.param_dict['kappa'].value = 0.1*np.array([1, 1, 0, 10, 10])\n",
+    "prob.param_dict['u_prev'].value = np.array([1, 0, 0, 0, 0])\n",
+    "prob.param_dict['u_min'].value = np.array([0, 0, -1, 0, 0])\n",
+    "prob.param_dict['u_max'].value = np.array([10, 1, 1, 0.1, 0.1])\n",
     "\n",
     "# solve problem conventionally\n",
     "t0 = time.time()\n",
@@ -146,6 +179,13 @@
     "print('\\nC solve time:', 1000*(t1-t0), 'ms')\n",
     "print('C objective function value:', val)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
