--- a/examples/portfolio.ipynb
+++ b/examples/portfolio.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,20 +103,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "np.random.seed(0)\n",
-    "gamma = 10\n",
-    "alpha = 1000*(-1+2*np.random.rand(n))\n",
-    "kappa_tc = 10*np.ones(n)\n",
-    "kappa_sh = 20*np.ones(n)\n",
+    "gamma = 1\n",
+    "alpha = np.random.randn(n)\n",
+    "kappa_tc = 0.01*np.ones(n)\n",
+    "kappa_sh = 0.05*np.ones(n)\n",
     "\n",
     "a.value = alpha/gamma\n",
-    "F.value = np.random.randn(n, m)\n",
-    "Sig_f_sqrt.value = np.diag(np.ones(m))\n",
-    "D_sqrt.value = np.diag(np.ones(n))\n",
+    "F.value = np.round(np.random.randn(n, m))\n",
+    "Sig_f_sqrt.value = np.diag(np.random.rand(m))\n",
+    "D_sqrt.value = np.diag(np.random.rand(n))\n",
     "k_tc.value = kappa_tc/gamma\n",
     "k_sh.value = kappa_sh/gamma\n",
     "w_prev.value = np.zeros(n)\n",
@@ -134,9 +134,125 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generating code ...\n",
+      "-----------------------------------------------------------------\n",
+      "           OSQP v0.6.2  -  Operator Splitting QP Solver\n",
+      "              (c) Bartolomeo Stellato,  Goran Banjac\n",
+      "        University of Oxford  -  Stanford University 2021\n",
+      "-----------------------------------------------------------------\n",
+      "problem:  variables n = 620, constraints m = 822\n",
+      "          nnz(P) + nnz(A) = 12830\n",
+      "settings: linear system solver = qdldl,\n",
+      "          eps_abs = 1.0e-03, eps_rel = 1.0e-03,\n",
+      "          eps_prim_inf = 1.0e-04, eps_dual_inf = 1.0e-04,\n",
+      "          rho = 1.00e-01 (adaptive),\n",
+      "          sigma = 1.00e-06, alpha = 1.60, max_iter = 4000\n",
+      "          check_termination: on (interval 25),\n",
+      "          scaling: on, scaled_termination: off\n",
+      "          warm start: on, polish: off, time_limit: off\n",
+      "\n",
+      "Getting workspace from OSQP object... \t\t\t\t[done]\n",
+      "Creating target directories... \t\t\t\t\t[done]\n",
+      "Copying OSQP sources... \t\t\t\t\t[done]\n",
+      "Generating customized code... \t\t\t\t\t[done]\n",
+      "Creating project...\n",
+      "-- The C compiler identification is AppleClang 12.0.5.12050022\n",
+      "-- The CXX compiler identification is AppleClang 12.0.5.12050022\n",
+      "-- Detecting C compiler ABI info\n",
+      "-- Detecting C compiler ABI info - done\n",
+      "-- Check for working C compiler: /Library/Developer/CommandLineTools/usr/bin/cc - skipped\n",
+      "-- Detecting C compile features\n",
+      "-- Detecting C compile features - done\n",
+      "-- Detecting CXX compiler ABI info\n",
+      "-- Detecting CXX compiler ABI info - done\n",
+      "-- Check for working CXX compiler: /Library/Developer/CommandLineTools/usr/bin/c++ - skipped\n",
+      "-- Detecting CXX compile features\n",
+      "-- Detecting CXX compile features - done\n",
+      "-- We are on a Darwin system\n",
+      "-- Embedded is 2 -DDFLOAT:BOOL=OFF -DDLONG:BOOL=ON\n",
+      "-- Passing EMBEDDED flag to compiler\n",
+      "-- Disabling printing for embedded\n",
+      "-- Printing is OFF\n",
+      "-- Disabling profiling for embedded\n",
+      "-- Profiling is OFF\n",
+      "-- Floats are OFF\n",
+      "-- Long integers (64bit) are ON\n",
+      "-- Configuring done\n",
+      "-- Generating done\n",
+      "-- Build files have been written to: /Users/maximilianschaller/Documents/Stanford/codegen/examples/portfolio_code/c/OSQP_code/build\n",
+      "[done]\n",
+      "Compiling Python wrapper... \t\t\t\t\t[done]\n",
+      "Copying code-generated Python solver to current directory... \t[done]\n",
+      "Compiling CPG Python wrapper... \t\t\t\t\t-- The C compiler identification is AppleClang 12.0.5.12050022\n",
+      "-- The CXX compiler identification is AppleClang 12.0.5.12050022\n",
+      "-- Detecting C compiler ABI info\n",
+      "-- Detecting C compiler ABI info - done\n",
+      "-- Check for working C compiler: /Library/Developer/CommandLineTools/usr/bin/cc - skipped\n",
+      "-- Detecting C compile features\n",
+      "-- Detecting C compile features - done\n",
+      "-- Detecting CXX compiler ABI info\n",
+      "-- Detecting CXX compiler ABI info - done\n",
+      "-- Check for working CXX compiler: /Library/Developer/CommandLineTools/usr/bin/c++ - skipped\n",
+      "-- Detecting CXX compile features\n",
+      "-- Detecting CXX compile features - done\n",
+      "-- We are on a Darwin system\n",
+      "-- Embedded is 2\n",
+      "-- Passing EMBEDDED flag to compiler\n",
+      "-- Disabling printing for embedded\n",
+      "-- Printing is OFF\n",
+      "-- Disabling profiling for embedded\n",
+      "-- Profiling is OFF\n",
+      "-- Floats are OFF\n",
+      "-- Long integers (64bit) are ON\n",
+      "-- Configuring done\n",
+      "-- Generating done\n",
+      "-- Build files have been written to: /Users/maximilianschaller/Documents/Stanford/codegen/examples/portfolio_code/c/build\n",
+      "Scanning dependencies of target cpg\n",
+      "[  7%] Building C object CMakeFiles/cpg.dir/src/cpg_workspace.c.o\n",
+      "[ 14%] Building C object CMakeFiles/cpg.dir/src/cpg_solve.c.o\n",
+      "[ 21%] Building C object CMakeFiles/cpg.dir/OSQP_code/src/osqp/auxil.c.o\n",
+      "[ 28%] Building C object CMakeFiles/cpg.dir/OSQP_code/src/osqp/error.c.o\n",
+      "[ 35%] Building C object CMakeFiles/cpg.dir/OSQP_code/src/osqp/lin_alg.c.o\n",
+      "[ 42%] Building C object CMakeFiles/cpg.dir/OSQP_code/src/osqp/osqp.c.o\n",
+      "[ 50%] Building C object CMakeFiles/cpg.dir/OSQP_code/src/osqp/proj.c.o\n",
+      "[ 57%] Building C object CMakeFiles/cpg.dir/OSQP_code/src/osqp/scaling.c.o\n",
+      "[ 64%] Building C object CMakeFiles/cpg.dir/OSQP_code/src/osqp/util.c.o\n",
+      "[ 71%] Building C object CMakeFiles/cpg.dir/OSQP_code/src/osqp/kkt.c.o\n",
+      "[ 78%] Building C object CMakeFiles/cpg.dir/OSQP_code/src/osqp/workspace.c.o\n",
+      "[ 85%] Building C object CMakeFiles/cpg.dir/OSQP_code/src/osqp/qdldl.c.o\n",
+      "[ 92%] Building C object CMakeFiles/cpg.dir/OSQP_code/src/osqp/qdldl_interface.c.o\n",
+      "[100%] Linking C static library out/libcpg.a\n",
+      "[100%] Built target cpg\n",
+      "CPG Code Generation Done.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ld: warning: object file (/Users/maximilianschaller/Documents/Stanford/codegen/examples/portfolio_code/c/build/out/libcpg.a(cpg_workspace.c.o)) was built for newer macOS version (11.0) than being linked (10.9)\n",
+      "ld: warning: object file (/Users/maximilianschaller/Documents/Stanford/codegen/examples/portfolio_code/c/build/out/libcpg.a(cpg_solve.c.o)) was built for newer macOS version (11.0) than being linked (10.9)\n",
+      "ld: warning: object file (/Users/maximilianschaller/Documents/Stanford/codegen/examples/portfolio_code/c/build/out/libcpg.a(osqp.c.o)) was built for newer macOS version (11.0) than being linked (10.9)\n",
+      "ld: warning: object file (/Users/maximilianschaller/Documents/Stanford/codegen/examples/portfolio_code/c/build/out/libcpg.a(workspace.c.o)) was built for newer macOS version (11.0) than being linked (10.9)\n",
+      "ld: warning: object file (/Users/maximilianschaller/Documents/Stanford/codegen/examples/portfolio_code/c/build/out/libcpg.a(error.c.o)) was built for newer macOS version (11.0) than being linked (10.9)\n",
+      "ld: warning: object file (/Users/maximilianschaller/Documents/Stanford/codegen/examples/portfolio_code/c/build/out/libcpg.a(auxil.c.o)) was built for newer macOS version (11.0) than being linked (10.9)\n",
+      "ld: warning: object file (/Users/maximilianschaller/Documents/Stanford/codegen/examples/portfolio_code/c/build/out/libcpg.a(lin_alg.c.o)) was built for newer macOS version (11.0) than being linked (10.9)\n",
+      "ld: warning: object file (/Users/maximilianschaller/Documents/Stanford/codegen/examples/portfolio_code/c/build/out/libcpg.a(scaling.c.o)) was built for newer macOS version (11.0) than being linked (10.9)\n",
+      "ld: warning: object file (/Users/maximilianschaller/Documents/Stanford/codegen/examples/portfolio_code/c/build/out/libcpg.a(qdldl_interface.c.o)) was built for newer macOS version (11.0) than being linked (10.9)\n",
+      "ld: warning: object file (/Users/maximilianschaller/Documents/Stanford/codegen/examples/portfolio_code/c/build/out/libcpg.a(qdldl.c.o)) was built for newer macOS version (11.0) than being linked (10.9)\n",
+      "ld: warning: object file (/Users/maximilianschaller/Documents/Stanford/codegen/examples/portfolio_code/c/build/out/libcpg.a(util.c.o)) was built for newer macOS version (11.0) than being linked (10.9)\n",
+      "ld: warning: object file (/Users/maximilianschaller/Documents/Stanford/codegen/examples/portfolio_code/c/build/out/libcpg.a(proj.c.o)) was built for newer macOS version (11.0) than being linked (10.9)\n",
+      "ld: warning: object file (/Users/maximilianschaller/Documents/Stanford/codegen/examples/portfolio_code/c/build/out/libcpg.a(kkt.c.o)) was built for newer macOS version (11.0) than being linked (10.9)\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "sys.path.append('../')\n",
@@ -154,9 +270,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Python solve time: 826.2348175048828 ms\n",
+      "Python objective function value: 2.902863873608083\n",
+      "\n",
+      "C solve time: 49.63493347167969 ms\n",
+      "C objective function value: 2.9015770339440508\n"
+     ]
+    }
+   ],
    "source": [
     "from portfolio_code.cpg_solver import cpg_solve\n",
     "import numpy as np\n",
@@ -168,11 +297,16 @@
     "    prob = pickle.load(f)\n",
     "\n",
     "# assign parameter values\n",
-    "np.random.seed(0)\n",
+    "n, m = 100, 10\n",
+    "np.random.seed(1)\n",
+    "gamma = 1\n",
+    "alpha = np.random.randn(n)\n",
+    "kappa_tc = 0.01*np.ones(n)\n",
+    "kappa_sh = 0.05*np.ones(n)\n",
     "prob.param_dict['a'].value = alpha/gamma\n",
-    "prob.param_dict['F'].value = np.random.randn(n, m)\n",
-    "prob.param_dict['Sig_f_sqrt'].value = np.diag(np.ones(m))\n",
-    "prob.param_dict['D_sqrt'].value = np.diag(np.ones(n))\n",
+    "prob.param_dict['F'].value = np.round(np.random.randn(n, m))\n",
+    "prob.param_dict['Sig_f_sqrt'].value = np.diag(np.random.rand(m))\n",
+    "prob.param_dict['D_sqrt'].value = np.diag(np.random.rand(n))\n",
     "prob.param_dict['k_tc'].value = kappa_tc/gamma\n",
     "prob.param_dict['k_sh'].value = kappa_sh/gamma\n",
     "prob.param_dict['w_prev'].value = np.zeros(n)\n",
