Rewrite D_sqrt@w as element-wise vector-vector multiplication.

--- a/examples/portfolio.ipynb
+++ b/examples/portfolio.ipynb
@@ -47,7 +47,7 @@
     "\n",
     "Note that we divided the objective function by the risk aversion factor $\\gamma$. This way, updating the value of $\\gamma$ only affects the linear part of the objective function, avoiding to compute a matrix factorization when solving the problem repeatedly.\n",
     "\n",
-    "Let's define the corresponding CVXPY problem."
+    "Let's define the corresponding CVXPY problem. Note that we define the diagonal of $D^{1/2}$ as a vector."
    ]
   },
   {
@@ -60,7 +60,7 @@
     "import numpy as np\n",
     "\n",
     "# define dimensions\n",
-    "n, m = 100, 10\n",
+    "n, m = 1000, 50\n",
     "\n",
     "# define variables\n",
     "w = cp.Variable(n, name='w')\n",
@@ -71,7 +71,7 @@
     "a = cp.Parameter(n, name='a')\n",
     "F = cp.Parameter((n, m), name='F')\n",
     "Sig_f_sqrt = cp.Parameter((m, m), name='Sig_f_sqrt')\n",
-    "D_sqrt = cp.Parameter((n, n), diag=True, name='D_sqrt')\n",
+    "d_sqrt = cp.Parameter(n, name='d_sqrt')\n",
     "k_tc = cp.Parameter(n, nonneg=True, name='k_tc')\n",
     "k_sh = cp.Parameter(n, nonneg=True, name='k_sh')\n",
     "w_prev = cp.Parameter(n, name='w_prev')\n",
@@ -80,7 +80,7 @@
     "# define objective\n",
     "objective = cp.Maximize(a@w\n",
     "                        -cp.sum_squares(Sig_f_sqrt@f)\n",
-    "                        -cp.sum_squares(D_sqrt@w)\n",
+    "                        -cp.sum_squares(cp.multiply(d_sqrt, w))\n",
     "                        -k_tc@cp.abs(delta_w)\n",
     "                        +k_sh@cp.minimum(0, w))\n",
     "\n",
@@ -116,7 +116,7 @@
     "a.value = alpha/gamma\n",
     "F.value = np.round(np.random.randn(n, m))\n",
     "Sig_f_sqrt.value = np.diag(np.random.rand(m))\n",
-    "D_sqrt.value = np.diag(np.random.rand(n))\n",
+    "d_sqrt.value = np.random.rand(n)\n",
     "k_tc.value = kappa_tc/gamma\n",
     "k_sh.value = kappa_sh/gamma\n",
     "w_prev.value = np.zeros(n)\n",
@@ -177,7 +177,7 @@
     "prob.param_dict['a'].value = alpha/gamma\n",
     "prob.param_dict['F'].value = np.round(np.random.randn(n, m))\n",
     "prob.param_dict['Sig_f_sqrt'].value = np.diag(np.random.rand(m))\n",
-    "prob.param_dict['D_sqrt'].value = np.diag(np.random.rand(n))\n",
+    "prob.param_dict['d_sqrt'].value = np.random.rand(n)\n",
     "prob.param_dict['k_tc'].value = kappa_tc/gamma\n",
     "prob.param_dict['k_sh'].value = kappa_sh/gamma\n",
     "prob.param_dict['w_prev'].value = np.zeros(n)\n",
