Corrected typo in cost function.

--- a/examples/MPC.ipynb
+++ b/examples/MPC.ipynb
@@ -57,7 +57,7 @@
     "x_init = cp.Parameter(n, name='x_init')\n",
     "\n",
     "# define objective\n",
-    "objective = cp.Minimize(cp.sum_squares(Psqrt@X[:,H-1]) + cp.sum_squares(Qsqrt@X[:,0:H-1]) + cp.sum_squares(Rsqrt@U))\n",
+    "objective = cp.Minimize(cp.sum_squares(Psqrt@X[:,H-1]) + cp.sum_squares(Qsqrt@X[:,:H]) + cp.sum_squares(Rsqrt@U))\n",
     "\n",
     "# define constraints\n",
     "constraints = [X[:,1:] == A@X[:,:H]+B@U,\n",
