Removed diagonality of cost matrices.

--- a/examples/MPC.ipynb
+++ b/examples/MPC.ipynb
@@ -49,9 +49,9 @@
     "X = cp.Variable((n, H+1), name='X')\n",
     "\n",
     "# define parameters\n",
-    "Psqrt = cp.Parameter((n, n), diag=True, name='Psqrt')\n",
-    "Qsqrt = cp.Parameter((n, n), diag=True, name='Qsqrt')\n",
-    "Rsqrt = cp.Parameter((m, m), diag=True, name='Rsqrt')\n",
+    "Psqrt = cp.Parameter((n, n), name='Psqrt')\n",
+    "Qsqrt = cp.Parameter((n, n), name='Qsqrt')\n",
+    "Rsqrt = cp.Parameter((m, m), name='Rsqrt')\n",
     "A = cp.Parameter((n, n), name='A')\n",
     "B = cp.Parameter((n, m), name='B')\n",
     "x_init = cp.Parameter(n, name='x_init')\n",
