--- a/examples/MPC.ipynb
+++ b/examples/MPC.ipynb
@@ -23,12 +23,12 @@
     "\\begin{array}{ll}\n",
     "\\text{minimize} \\quad & \\Vert P^{1/2} X_{:,H} \\Vert_2^2 + \\Vert Q^{1/2} X_{:,0:H-1} \\Vert_F^2 + \\Vert R^{1/2} U \\Vert_F^2\\\\\n",
     "\\text{subject to} \\quad &X_{:,1:H} = A X_{:,0:H-1} + B U \\\\\n",
-    "& | U | \\leq 1 \\\\\n",
+    "& | U | \\leq \\mathbb{1} \\\\\n",
     "& X_{:,0} = x_\\mathrm{init}, \\\\\n",
     "\\end{array}\n",
     "\\end{equation}\n",
     "\n",
-    "with variables $X \\in \\mathbb{R}^{n \\times H+1}$ and $U \\in \\mathbb{R}^{m \\times H}$. \n",
+    "with variables $X \\in \\mathbb{R}^{n \\times H+1}$ and $U \\in \\mathbb{R}^{m \\times H}$. Note that $|U|$ denotes the element-wise absolute value of $U$.\n",
     "\n",
     "Let's define the corresponding CVXPY problem."
    ]
