Increasing utility function, then reformulate.

--- a/examples/network.ipynb
+++ b/examples/network.ipynb
@@ -12,12 +12,14 @@
     "\n",
     "\\begin{equation}\n",
     "U_i(f_i) = \\begin{cases}\n",
-    "w_i f_i \\quad &\\text{if} \\quad f^\\mathrm{min}_i \\leq f_i \\leq f^\\mathrm{max}_i \\\\\n",
-    "-\\infty \\quad &\\text{otherwise}.\n",
+    "-\\infty \\quad &\\text{if} \\quad f_i < f^\\mathrm{min}_i \\\\\n",
+    "w_i f_i \\quad &\\text{if} \\quad f^\\mathrm{min}_i \\leq f_i \\leq f_i^\\mathrm{max} \\\\\n",
+    "w_i f_i^\\mathrm{max} \\quad &\\text{otherwise},\n",
     "\\end{cases}\n",
     "\\end{equation}\n",
     "\n",
-    "To summarize in vector form, we want to solve the optimization problem\n",
+    "\n",
+    "where the first case is the implicit version of the constraint $f^\\mathrm{min} \\leq f$. Except for the case of degenerate networks, the third condition will never hold at optimality. Intuitively, when $f_i > f_i^\\mathrm{max}$, reducing $f_i$ at not cost, to free capacity for other flows that run through the edges of flow $i$, improves the objective function. We encode this information in the constraint $f \\leq f^\\mathrm{max}$ and rewrite $U$ in vector form to arrive at the optimization problem\n",
     "\n",
     "\\begin{equation}\n",
     "\\begin{array}{ll}\n",
