Adapted parameter value randomization.

--- a/examples/portfolio.ipynb
+++ b/examples/portfolio.ipynb
@@ -114,12 +114,13 @@
     "kappa_sh = 0.05*np.ones(n)\n",
     "\n",
     "a.value = alpha/gamma\n",
-    "F.value = np.round(np.random.randn(n, m))\n",
-    "Sig_f_sqrt.value = np.diag(np.random.rand(m))\n",
+    "F.value = np.random.randn(n, m)\n",
+    "Sig_f_sqrt.value = np.random.rand(m, m)\n",
     "d_sqrt.value = np.random.rand(n)\n",
     "k_tc.value = kappa_tc/gamma\n",
     "k_sh.value = kappa_sh/gamma\n",
-    "w_prev.value = np.zeros(n)\n",
+    "w_prev_unnormalized = np.random.rand(n)\n",
+    "w_prev.value = w_prev_unnormalized/np.linalg.norm(w_prev_unnormalized)\n",
     "L.value = 1.6\n",
     "\n",
     "val = problem.solve()"
