Introduced saturation to utility function.

--- a/examples/resource.ipynb
+++ b/examples/resource.ipynb
@@ -10,13 +10,13 @@
     "\n",
     "\\begin{equation}\n",
     "\\begin{array}{ll}\n",
-    "\\text{maximize} \\quad &\\mathrm{tr} \\left( W^T X \\right)\\\\\n",
+    "\\text{maximize} \\quad &\\mathrm{tr} \\left( \\min \\left( X W^T, S\\right) \\right)\\\\\n",
     "\\text{subject to} \\quad &X^\\mathrm{min} \\leq X \\leq X^\\mathrm{max} \\\\\n",
     "&X^T \\mathbb{1} \\leq r,\n",
     "\\end{array}\n",
     "\\end{equation}\n",
     "\n",
-    "with variable $X \\in \\mathbb{R}^{n \\times m}$. The minimum and maximum amounts of resources to be allocated are denoted by $X^\\mathrm{min} \\geq 0$ and $X^\\mathrm{max} \\geq X^\\mathrm{min}$, respectively, while $r$ is the vector of available resources. The problem is feasible if $\\left(X^\\mathrm{min}\\right)^T \\mathbb{1} \\leq r$ and $X^\\mathrm{min} \\leq X^\\mathrm{max}$.\n",
+    "with variable $X \\in \\mathbb{R}^{n \\times m}$. The utility for some job $i$ cannot be increased beyond the saturation value $S_{ii}$, with $S \\in \\mathbb{S}_+^{n}$ being diagonal. The minimum and maximum amounts of resources to be allocated are denoted by $X^\\mathrm{min} \\geq 0$ and $X^\\mathrm{max} \\geq X^\\mathrm{min}$, respectively, while $r$ is the vector of available resources. The problem is feasible if $\\left(X^\\mathrm{min}\\right)^T \\mathbb{1} \\leq r$ and $X^\\mathrm{min} \\leq X^\\mathrm{max}$.\n",
     "\n",
     "Let's define the corresponding CVXPY problem."
    ]
@@ -38,12 +38,13 @@
     "\n",
     "# define parameters\n",
     "W = cp.Parameter((n, m), name='W')\n",
+    "S = cp.Parameter((n, n), diag=True, name='S')\n",
     "X_min = cp.Parameter((n, m), name='X_min')\n",
     "X_max = cp.Parameter((n, m), name='X_max')\n",
     "r = cp.Parameter(m, name='r')\n",
     "\n",
     "# define objective\n",
-    "objective = cp.Maximize(cp.trace(W.T@X))\n",
+    "objective = cp.Maximize(cp.trace(cp.minimum(X@W.T, S)))\n",
     "\n",
     "# define constraints\n",
     "constraints = [X_min <= X, X<= X_max, \n",
@@ -69,6 +70,7 @@
     "np.random.seed(0)\n",
     "\n",
     "W.value = np.ones((n, m)) + 0.1*np.random.rand(n, m)\n",
+    "S.value = 5*np.eye(n)\n",
     "X_min.value = np.random.rand(n, m)\n",
     "X_max.value = 10 + np.random.rand(n, m)\n",
     "r.value = np.matmul(X_min.value.T, np.ones(n)) + 10*np.random.rand(m)\n",
