--- a/examples/actuator.ipynb
+++ b/examples/actuator.ipynb
@@ -41,7 +41,7 @@
     "import cvxpy as cp\n",
     "\n",
     "# define dimensions\n",
-    "n, m = 5, 3\n",
+    "n, m = 8, 3\n",
     "\n",
     "# define variables\n",
     "u = cp.Variable(n, name='u')\n",
@@ -70,7 +70,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Assign parameter values and solve the problem. In this case, the wrench vector $w = \\left[f^T t\\right]^T$ consists of force $f \\in \\mathbb{R}^2$ and torque $t \\in \\mathbb{R}$ in two-dimensional space. The control input $u \\in \\mathbb{R}^5$ contains a rocket's vertical main engine thrust, lateral main engine thrust, lateral grid fin force, and lateral reaction control system thrust in opposite directions. The first axis points upwards. [TODO: Add figure.]"
+    "Assign parameter values and solve the problem. In this case, the wrench vector $w = \\left[f^T t\\right]^T$ consists of force $f \\in \\mathbb{R}^2$ and torque $t \\in \\mathbb{R}$ in two-dimensional space. The control input $u \\in \\mathbb{R}^8$ contains four pairs of horizontal and vertical forces at 4 positions in the plane."
    ]
   },
   {
@@ -81,16 +81,16 @@
    "source": [
     "import numpy as np\n",
     "\n",
-    "A.value = np.array([[1, 0, 0, 0, 0],\n",
-    "                    [0, 1, 1, 1, -1],\n",
-    "                    [0, -1, 1, 1, -1]])\n",
+    "A.value = np.array([[1, 0, 1, 0, 1, 0, 1, 0],\n",
+    "                    [0, 1, 0, 1, 0, 1, 0, 1],\n",
+    "                    [1, -1, 1, 1, -1, 1, -1, -1]])\n",
     "\n",
-    "w.value = np.array([1, 0.1, 0.1])\n",
+    "w.value = np.array([1, 1, 1])\n",
     "lamb_sm.value = 0.5\n",
-    "kappa.value = 0.1*np.array([1, 1, 0, 10, 10])\n",
-    "u_prev.value = np.array([1, 0, 0, 0, 0])\n",
-    "u_min.value = np.array([0, 0, -1, 0, 0])\n",
-    "u_max.value = np.array([10, 1, 1, 0.1, 0.1])\n",
+    "kappa.value = 0.1*np.ones(8)\n",
+    "u_prev.value = np.zeros(8)\n",
+    "u_min.value = -np.ones(8)\n",
+    "u_max.value = np.ones(8)\n",
     "\n",
     "val = problem.solve()"
    ]
@@ -138,16 +138,16 @@
     "    prob = pickle.load(f)\n",
     "\n",
     "# assign parameter values\n",
-    "prob.param_dict['A'].value = np.array([[1, 0, 0, 0, 0],\n",
-    "                                       [0, 1, 1, 1, -1],\n",
-    "                                       [0, -1, 1, 1, -1]])\n",
+    "prob.param_dict['A'].value = np.array([[1, 0, 1, 0, 1, 0, 1, 0],\n",
+    "                                       [0, 1, 0, 1, 0, 1, 0, 1],\n",
+    "                                       [1, -1, 1, 1, -1, 1, -1, -1]])\n",
     "\n",
-    "prob.param_dict['w'].value = np.array([1, 0.1, 0.1])\n",
+    "prob.param_dict['w'].value = np.array([1, 1, 1])\n",
     "prob.param_dict['lamb_sm'].value = 0.5\n",
-    "prob.param_dict['kappa'].value = 0.1*np.array([1, 1, 0, 10, 10])\n",
-    "prob.param_dict['u_prev'].value = np.array([1, 0, 0, 0, 0])\n",
-    "prob.param_dict['u_min'].value = np.array([0, 0, -1, 0, 0])\n",
-    "prob.param_dict['u_max'].value = np.array([10, 1, 1, 0.1, 0.1])\n",
+    "prob.param_dict['kappa'].value = 0.1*np.ones(8)\n",
+    "prob.param_dict['u_prev'].value = np.zeros(8)\n",
+    "prob.param_dict['u_min'].value = -np.ones(8)\n",
+    "prob.param_dict['u_max'].value = np.ones(8)\n",
     "\n",
     "# solve problem conventionally\n",
     "t0 = time.time()\n",
