Plotting in notebooks.

--- a/examples/charging.ipynb
+++ b/examples/charging.ipynb
@@ -93,6 +93,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import matplotlib.pyplot as plt\n",
+    "\n",
     "p.value = np.concatenate((3*np.ones(3*60),\n",
     "                          5*np.ones(7*60),\n",
     "                          1*np.ones(14*60)), axis=0)\n",
@@ -192,9 +194,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "test",
+   "display_name": "cpg_env",
    "language": "python",
-   "name": "test"
+   "name": "cpg_env"
   },
   "language_info": {
    "codemirror_mode": {
