--- a/examples/resource.ipynb
+++ b/examples/resource.ipynb
@@ -31,7 +31,7 @@
     "import numpy as np\n",
     "\n",
     "# define dimensions\n",
-    "n, m = 100, 10\n",
+    "n, m = 30, 10\n",
     "\n",
     "# define variable\n",
     "X = cp.Variable((n, m), name='X')\n",
@@ -70,7 +70,7 @@
     "np.random.seed(0)\n",
     "\n",
     "W.value = np.ones((n, m)) + 0.1*np.random.rand(n, m)\n",
-    "S.value = 5*np.eye(n)\n",
+    "S.value = 100*np.eye(n)\n",
     "X_min.value = np.random.rand(n, m)\n",
     "X_max.value = 10 + np.random.rand(n, m)\n",
     "r.value = np.matmul(X_min.value.T, np.ones(n)) + 10*np.random.rand(m)\n",
@@ -122,6 +122,7 @@
     "\n",
     "# assign parameter values\n",
     "np.random.seed(0)\n",
+    "prob.param_dict['S'].value = 100*np.eye(n)\n",
     "prob.param_dict['W'].value = np.ones((n, m)) + 0.1*np.random.rand(n, m)\n",
     "prob.param_dict['X_min'].value = np.random.rand(n, m)\n",
     "prob.param_dict['X_max'].value = 10 + np.random.rand(n, m)\n",
